# opencv-dnn-cuda-test

./: .gitignore  README.md
cpp_code/: CMakeLists.txt  README.md  main.cpp
python_code/: README.md  main.py
